--- a/template/data-tool/example/public/index.html
+++ b/template/data-tool/example/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>data-tool-template</title>
+    <title>{{name}}</title>
     <script src="./load-fonts.js"></script>
   </head>
 
